--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<li><a href="https://shkhatri123.github.io/Asteroid/">Asteroid</a></li>
 	<li><a href="https://xxcalebsciannellaxx.github.io/Asteroids/">Asteroids</a></li>
 	</ul>
+	<li><a href="https://hzamani2.github.io/asteroidShooter/">Space Shooter (Zamani)</a></li>
 
 </body>
 </html>
