--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-	<h1>3D Game Development Projects 2017</h1>
+	<h1>Game Development Projects 2017</h1>
 
 <p>2D Space Shooter Games</p>
 	<ul> 
